# MazuADM

./: .env.example  .gitignore  Cargo.toml  DB_STRUCTURE.md  Dockerfile  README.md  backup_20260128_111753.sql  config.example.toml  docker-compose.yml  mazuadm-api.service  nginx.conf
api/: Cargo.toml  build.rs
api/src/: events.rs  handlers.rs  main.rs  routes.rs
cli/: Cargo.toml
cli/src/: api.rs  exploit_config.rs  main.rs  models.rs
core/: Cargo.toml  build.rs
core/migrations/: 001_initial.sql  002_persistent_containers.sql  003_preserve_logs.sql  004_adhoc_jobs.sql  005_unique_exploit_name_per_challenge.sql  006_max_containers_per_exploit.sql  007_drop_exploit_containers.sql  008_drop_exploit_priority.sql  009_remove_adhoc_jobs.sql  010_add_settings_and_team_enabled.sql  011_add_exploit_jobs_schedule_at.sql  012_add_exploit_jobs_create_reason.sql  013_create_reason_varchar20.sql  014_add_exploit_max_concurrent_jobs.sql  015_add_exploit_ignore_connection_info.sql  016_exploit_runners.sql  017_add_relation_enabled.sql  018_add_exploit_envs.sql  019_add_job_envs.sql
core/src/: config.rs  container_manager.rs  db.rs  events.rs  executor.rs  lib.rs  models.rs  scheduler.rs  settings.rs
docs/: API.md  ARCHITECTURE.md  ASYNC.md  CLI.md  DATABASE.md  WebSocket.md
example/: .gitignore  README.md
example/chals/chal1-web/exp/: Dockerfile  config.toml  exploit.py
example/chals/chal1-web/exp2/: config.toml
example/chals/chal2-bin/exp/: Dockerfile  chall.c  config.toml  exploit.py  lib.py
example/chals/chal2-bin/exp2/: config.toml  exploit.py
example/chals/chal2-bin/srv/: flag
example/chals/chal3-cmdi/exp/: config.toml  exploit.py
example/chals/chal3-cmdi/exp2/: config.toml
example/exp/: chal1-web  chal2-bin-2
example/exp-template/: Dockerfile  config.toml  exploit.py
example/exp/chal3-only/: exploit.py
example/game-harness/: config.py  connector.py  game_server.py  main.py  mazu_api.py  models.py
example/game-harness/docs/: API.md  WebSocket.md
example/scripts/: bootstrap_sample.sh
sample/: README.md
sample/chals/chal1-web/: README.md
sample/chals/chal1-web/exp/: Dockerfile  exploit.py
sample/chals/chal1-web/exp2/: Dockerfile  exploit.py
sample/chals/chal1-web/srv/: Dockerfile  app.py
sample/chals/chal2-bin/exp/: Dockerfile  exploit.py  run
sample/chals/chal2-bin/exp2/: chall.c  exploit.py  lib.py
sample/chals/chal2-bin/srv/: Dockerfile
sample/chals/chal3-cmdi/: README.md
sample/chals/chal3-cmdi/exp/: Dockerfile  exploit.py
sample/chals/chal3-cmdi/exp2/: Dockerfile  exploit.py
sample/chals/chal3-cmdi/srv/: Dockerfile
sample/exp/: chal1-web-2  chal2-bin  chal3-cmdi  chal3-cmdi-2
sample/exp-template/: .dockerignore  Dockerfile  README.md  config.toml  exploit.py  lib.py
sample/exp/chal3-once/: exploit.py
sample/exp/chal3-only/: exploit.py
sample/scripts/: start_chals.sh  test_exps.sh
scripts/: install.sh
web/: .gitignore  index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
web/src/: App.svelte  Board.svelte  api.js  app.css  main.js  router.js  styles.css  websocket.js
web/src/lib/: api.js  websocket.js
web/src/lib/components/: Board.svelte  Modal.svelte
web/src/lib/pages/: BoardPage.svelte  ChallengesPage.svelte  ContainersPage.svelte  FlagsPage.svelte  RoundsPage.svelte  SettingsPage.svelte  TeamsPage.svelte
web/src/lib/routes/: BoardRoute.svelte  FlagsRoute.svelte  RoundsRoute.svelte
web/src/lib/stores/: app-logic.js  app-logic.test.js  app.js
web/src/lib/ui/: FilterBar.svelte  Icon.svelte  Modal.svelte  ToastHost.svelte  toastStore.js
web/src/lib/utils/: filters.js  lookup.js
web/src/pages/: BoardPage.svelte  ChallengesPage.svelte  ContainersPage.svelte  RoundsPage.svelte  SettingsPage.svelte  TeamsPage.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/board/: +page.svelte
web/src/routes/challenges/: +page.svelte
web/src/routes/containers/: +page.svelte
web/src/routes/flags/: +page.svelte
web/src/routes/rounds/: +page.svelte
(+46 files in other folders)
