[package]
name = "mazuadm-api"
version = "0.1.0"
edition = "2021"

[build-dependencies]
chrono = "0.4"

[dependencies]
mazuadm-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-br", "compression-gzip", "compression-deflate"] }
