[package]
name = "mazuadm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
bollard = "0.20"
regex = "1"
futures = "0.3"
rand = "0.8"
utoipa = { version = "5", features = ["chrono"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
serde = { workspace = true }
toml = { workspace = true }
